# ragagent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: cleaning_patterns.yaml  config.yaml  entity_patterns.jsonl  extraction_prompts.yaml  response_prompts.yaml  rewriting_prompt.yaml
docker/app/: Dockerfile
docker/neo4j/init/: run_cypher.sh  schema.cypher
docs/: neo4j_schema_implementation.md  qdrant_manager_guide.md
eval/: sample_eval.jsonl
examples/: graph_retriever_demo.py  hybrid_retriever_demo.py  qdrant_usage_example.py  query_parser_demo.py
plans/: deep-research-mode.md  developer-tasks.md  enhancements-summary.md  entity-deduplication-strategies.md  graph-rag-architecture.md  phase-1-foundation.md  phase-2-entity-extraction.md  phase-3-normalization-curation.md  phase-3.5-enhanced-review.md  phase-4-retrieval-system.md  phase-6-discovery-polish.md  phase-7-review-interface.md  prompt-engineering-notes.md  refactoring-and-semantic-improvements.md
scripts/: backfill_entity_embeddings.py  backfill_relationships.py  cleanup_relationships.py  ingest_documents.py  query_system.py  reset_databases.py  run_discovery.py  setup_databases.py
src/: __init__.py
src/curation/: batch_operations.py  entity_approval.py  review_interface.py
src/curation/interactive/: app.py  keybindings.py
src/extraction/: cooccurrence_extractor.py  llm_extractor.py  spacy_extractor.py
src/ingestion/: __init__.py  chunker.py  metadata_extractor.py  pdf_parser.py  text_cleaner.py  text_rewriter.py
src/pipeline/: __init__.py  base.py  discovery_pipeline.py  ingestion_pipeline.py  update_pipeline.py
src/pipeline/stages/: checkpoint.py  chunking.py  cleaning.py  embedding.py  extraction.py  parsing.py  storage.py
src/ragagent/: __init__.py  app.py  config.py  errors.py  logging_setup.py  tracing.py
src/ragagent/agent/: __init__.py  prompts.py  service.py  verification.py
src/ragagent/chunking/: splitter.py
src/ragagent/embeddings/: client.py
src/ragagent/eval/: __init__.py  dataset.py  metrics.py  runner.py
src/ragagent/graph/: store.py
src/ragagent/ingest/: cli.py  extract.py
src/ragagent/nlp/: keywords.py  relations.py
src/ragagent/retrieval/: __init__.py  context.py  graph.py  models.py  vector.py
src/retrieval/: __init__.py  graph_retriever.py  hybrid_retriever.py  models.py  query_parser.py  research_agent.py  response_generator.py  vector_retriever.py
src/storage/: __init__.py  neo4j_manager.py  qdrant_manager.py  schemas.py
src/utils/: __init__.py  config.py  embeddings.py  llm_client.py  logger.py  progress.py
tests/: test_config.py  test_embedding_provider.py  test_llm_client.py  test_query_cli_history.py
tests/agent/: test_service.py  test_verification.py
tests/chunking/: test_splitter.py
tests/eval/: test_metrics.py
tests/retrieval/: test_context.py  test_graph.py  test_vector.py
tests/test_curation/: test_batch_operations.py  test_entity_approval.py  test_neighborhood_issues.py  test_relationship_promotion.py  test_relationship_promotion_invalid_mentions.py  test_review_interactive_logic.py  test_review_interface.py
tests/test_extraction/: test_llm_extractor.py  test_spacy_extractor.py
tests/test_ingestion/: test_pdf_metadata.py  test_text_cleaner.py  test_text_rewriter.py
tests/test_interactive/: test_neighborhood_modal_flow.py  test_primary_selection_modal.py
tests/test_normalization/: test_acronym_resolver.py  test_entity_deduplicator.py
tests/test_pipeline/: test_acronym_enrichment_pipeline.py  test_auto_merge.py  test_candidate_storage_pipeline.py  test_discovery_pipeline.py  test_ingestion_pipeline_dedup.py  test_ingestion_pipeline_mapping.py  test_ingestion_pipeline_text_routing.py  test_llm_extraction_pipeline.py  test_storage_stage.py  test_update_pipeline.py
tests/test_retrieval/: __init__.py  test_graph_retriever.py  test_hybrid_retriever.py  test_query_parser.py  test_research_agent.py  test_response_generator.py  test_vector_retriever.py
tests/test_storage/: test_neo4j_entity_labels.py  test_qdrant_manager.py
tests/vectorstore/: test_qdrant_store.py
(+7 files in other folders)
